deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: accuknoxkub
   namespace: default
spec:
   replicas: 1
   selector:
      matchLabels:
         bb: web
   template:
      metadata:
         labels:
            bb: web
      spec:
         containers:
            - name: accuknoxkub
              image: accuknox
              imagePullPolicy: Never
---
