service.yml
apiVersion: v1
kind: Service
metadata:
  name: accuknox-service
  namespace: default
spec:
  type: NodePort  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4499
